# libopencm3-meson

./: .gitignore  Makefile  README.md  meson.build
cross/sam/: 4l.txt  d.txt
cross/stm32/: f4.txt
include/libopencm3/: meson.build
include/libopencm3/efm32/ezr32wg/: meson.build
include/libopencm3/efm32/g/: meson.build
include/libopencm3/efm32/gg/: meson.build
include/libopencm3/efm32/hg/: meson.build
include/libopencm3/efm32/lg/: meson.build
include/libopencm3/efm32/tg/: meson.build
include/libopencm3/efm32/wg/: meson.build
include/libopencm3/gd32/f1x0/: meson.build
include/libopencm3/lm3s/: meson.build
include/libopencm3/lpc13xx/: meson.build
include/libopencm3/lpc17xx/: meson.build
include/libopencm3/lpc43xx/m0/: meson.build
include/libopencm3/lpc43xx/m4/: meson.build
include/libopencm3/msp432/e4/: meson.build
include/libopencm3/nrf/51/: meson.build
include/libopencm3/nrf/52/: meson.build
include/libopencm3/pac55xx/: meson.build
include/libopencm3/sam/3a/: meson.build
include/libopencm3/sam/3n/: meson.build
include/libopencm3/sam/3s/: meson.build
include/libopencm3/sam/3u/: meson.build
include/libopencm3/sam/3x/: meson.build
include/libopencm3/sam/4l/: meson.build
include/libopencm3/sam/d/: meson.build
include/libopencm3/stm32/f0/: meson.build
include/libopencm3/stm32/f1/: meson.build
include/libopencm3/stm32/f2/: meson.build
include/libopencm3/stm32/f3/: meson.build
include/libopencm3/stm32/f4/: meson.build
include/libopencm3/stm32/f7/: meson.build
include/libopencm3/stm32/g0/: meson.build
include/libopencm3/stm32/g4/: meson.build
include/libopencm3/stm32/h7/: meson.build
include/libopencm3/stm32/l0/: meson.build
include/libopencm3/stm32/l1/: meson.build
include/libopencm3/stm32/l4/: meson.build
include/libopencm3/swm050/: meson.build
include/libopencm3/vf6xx/: meson.build
include/libopencmsis/: meson.build
lib/: cross.txt  meson.build
lib/cm3/: meson.build
lib/efm32/ezr32wg/: Makefile  meson.build
lib/efm32/g/: Makefile  meson.build
lib/efm32/gg/: Makefile  meson.build
lib/efm32/hg/: Makefile  meson.build
lib/efm32/lg/: Makefile  meson.build
lib/efm32/tg/: Makefile  meson.build
lib/efm32/wg/: Makefile  meson.build
lib/gd32/f1x0/: meson.build
lib/lm3s/: meson.build
lib/lm4f/: meson.build
lib/lpc13xx/: meson.build
lib/lpc17xx/: meson.build
lib/lpc43xx/m0/: Makefile  meson.build
lib/lpc43xx/m4/: Makefile  meson.build
lib/msp432/e4/: meson.build
lib/nrf/51/: meson.build
lib/nrf/52/: meson.build
lib/pac55xx/: meson.build
lib/sam/3a/: meson.build
lib/sam/3n/: meson.build
lib/sam/3s/: meson.build
lib/sam/3u/: meson.build
lib/sam/3x/: meson.build
lib/sam/4l/: meson.build
lib/sam/d/: meson.build
lib/stm32/f0/: meson.build
lib/stm32/f1/: meson.build
lib/stm32/f2/: meson.build
lib/stm32/f3/: meson.build
lib/stm32/f4/: meson.build
lib/stm32/f7/: meson.build
lib/stm32/g0/: meson.build
lib/stm32/g4/: meson.build
lib/stm32/h7/: meson.build
lib/stm32/l0/: meson.build
lib/stm32/l1/: meson.build
lib/stm32/l4/: meson.build
lib/swm050/: meson.build
lib/vf6xx/: meson.build
scripts/: build  irq2nvic_h  irq2nvic_h.py  make2meson.awk  make2meson.sh
