efm32ezr32wg_json = files('efm32/ezr32wg/irq.json')
efm32g_json = files('efm32/g/irq.json')
efm32gg_json = files('efm32/gg/irq.json')
efm32hg_json = files('efm32/hg/irq.json')
efm32lg_json = files('efm32/lg/irq.json')
efm32tg_json = files('efm32/tg/irq.json')
efm32wg_json = files('efm32/wg/irq.json')
gd32f1x0_json = files('gd32/f1x0/irq.json')
lm3s_json = files('lm3s/irq.json')
lpc13xx_json = files('lpc13xx/irq.json')
lpc17xx_json = files('lpc17xx/irq.json')
lpc43xxm0_json = files('lpc43xx/m0/irq.json')
lpc43xxm4_json = files('lpc43xx/m4/irq.json')
msp432e4_json = files('msp432/e4/irq.json')
nrf51_json = files('nrf/51/irq.json')
nrf52_json = files('nrf/52/irq.json')
pac55xx_json = files('pac55xx/irq.json')
sam3a_json = files('sam/3a/irq.json')
sam3n_json = files('sam/3n/irq.json')
sam3s_json = files('sam/3s/irq.json')
sam3u_json = files('sam/3u/irq.json')
sam3x_json = files('sam/3x/irq.json')
sam4l_json = files('sam/4l/irq.json')
samd_json = files('sam/d/irq.json')
stm32f0_json = files('stm32/f0/irq.json')
stm32f1_json = files('stm32/f1/irq.json')
stm32f2_json = files('stm32/f2/irq.json')
stm32f3_json = files('stm32/f3/irq.json')
stm32f4_json = files('stm32/f4/irq.json')
stm32f7_json = files('stm32/f7/irq.json')
stm32g0_json = files('stm32/g0/irq.json')
stm32g4_json = files('stm32/g4/irq.json')
stm32h7_json = files('stm32/h7/irq.json')
stm32l0_json = files('stm32/l0/irq.json')
stm32l1_json = files('stm32/l1/irq.json')
stm32l4_json = files('stm32/l4/irq.json')
swm050_json = files('swm050/irq.json')
vf6xx_json = files('vf6xx/irq.json')

subdir('efm32/ezr32wg')
subdir('efm32/g')
subdir('efm32/gg')
subdir('efm32/hg')
subdir('efm32/lg')
subdir('efm32/tg')
subdir('efm32/wg')
subdir('gd32/f1x0')
subdir('lm3s')
subdir('lpc13xx')
subdir('lpc17xx')
subdir('lpc43xx/m0')
subdir('lpc43xx/m4')
subdir('msp432/e4')
subdir('nrf/51')
subdir('nrf/52')
subdir('pac55xx')
subdir('sam/3a')
subdir('sam/3n')
subdir('sam/3s')
subdir('sam/3u')
subdir('sam/3x')
subdir('sam/4l')
subdir('sam/d')
subdir('stm32/f0')
subdir('stm32/f1')
subdir('stm32/f2')
subdir('stm32/f3')
subdir('stm32/f4')
subdir('stm32/f7')
subdir('stm32/g0')
subdir('stm32/g4')
subdir('stm32/h7')
subdir('stm32/l0')
subdir('stm32/l1')
subdir('stm32/l4')
subdir('swm050')
subdir('vf6xx')
