subdir('efm32/ezr32wg')
subdir('efm32/g')
subdir('efm32/gg')
subdir('efm32/hg')
subdir('efm32/lg')
subdir('efm32/tg')
subdir('efm32/wg')
subdir('gd32/f1x0')
subdir('lm3s')
subdir('lpc13xx')
subdir('lpc17xx')
subdir('lpc43xx/m0')
subdir('lpc43xx/m4')
subdir('msp432/e4')
subdir('nrf/51')
subdir('nrf/52')
subdir('pac55xx')
subdir('sam/3a')
subdir('sam/3n')
subdir('sam/3s')
subdir('sam/3u')
subdir('sam/3x')
subdir('sam/4l')
subdir('sam/d')
subdir('stm32/f0')
subdir('stm32/f1')
subdir('stm32/f2')
subdir('stm32/f3')
subdir('stm32/f4')
subdir('stm32/f7')
subdir('stm32/g0')
subdir('stm32/g4')
subdir('stm32/h7')
subdir('stm32/l0')
subdir('stm32/l1')
subdir('stm32/l4')
subdir('swm050')
subdir('vf6xx')
